# aurora-dsql-tortoise-orm

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-attribution.yml  dsql-cluster-create.yml  dsql-cluster-delete.yml  gitleaks-scan.yml  integration-tests.yml  pre-commit.yml  publish.yml  unit-tests.yml
aurora_dsql_tortoise/: __init__.py  aerich_compat.py
aurora_dsql_tortoise/aerich/: patch.py
aurora_dsql_tortoise/asyncpg/: __init__.py  client.py  schema_generator.py
aurora_dsql_tortoise/common/: config.py  models.py  schema_generator.py
aurora_dsql_tortoise/psycopg/: __init__.py  client.py  schema_generator.py
docs/: ADAPTER_BEHAVIOR.md  KNOWN_ISSUES.md
example/: __init__.py  example.py  models.py  tortoise_config.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_aerich.py  test_bulk_operations.py  test_connection.py  test_crud.py  test_indexes.py  test_mixin.py  test_multiple_ddl.py  test_pool.py  test_query_execution.py  test_transactions.py
tests/integration/aerich_models/: add_column_v1.py  add_column_v2.py  add_model_v1.py  add_model_v2.py  add_model_v3.py  basic.py  multi_model_v1.py  multi_model_v2.py
tests/integration/fields/: test_bigint.py  test_binary.py  test_boolean.py  test_char.py  test_charenum.py  test_date.py  test_datetime.py  test_decimal.py  test_float.py  test_foreignkey.py  test_int.py  test_intenum.py  test_manytomany.py  test_onetoone.py  test_smallint.py  test_text.py  test_time.py  test_timedelta.py  test_uuid.py
tests/unit/: __init__.py  conftest.py  test_aerich_compat.py  test_asyncpg_client.py  test_backend_registration.py  test_psycopg_client.py  test_public_api.py  test_schema_generator.py  test_sql_splitting.py  test_update_or_create.py  test_url_parsing.py
